# libexif-cffi

./: README.md  pyproject.toml  setup.py
libexif/: lib.py  libexif.cdef  libexif_build.py
libexif/c-src/: libexif.c
