[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "cffi",
  "setuptools",
  "pathlib2; python_version == '2.7'",
]

[project]
name = 'libexif-cffi'
dynamic = ["version", "readme"]
dependencies = [
  "cffi >= 1.0",
  "pathlib2; python_version == '2.7'",
]
description = "exif manipulation utilities"
license = 'MIT'
maintainers = [ { name = "Gerald Thibault" } ]
authors = [
  { name = "Gerald Thibault", email = "jt@devhub.com" }
]

[project.urls]
"Source Code" = "https://github.com/devhub/libexif-cffi"

[tool.setuptools]
packages = ["libexif"]

[tool.setuptools.dynamic]
version = {attr = "libexif.__version__"}
readme = {file = "README.md", content-type = "text/markdown" }
